# trelliscope-py

./: .gitignore  .pre-commit-config.yaml  README.md  development.md  pyproject.toml  setup.py
.github/workflows/: all-checks.yml  build-docs.yml  lint.yml  unit-tests.yml
docs/: conf.py  contributing.md  index.rst  quickstart.ipynb
docs/api-reference/: facets.rst  html_utils.rst  index.rst  meta.rst  panels.rst  trelliscope.rst
docs/api_reference/: modules.rst  trelliscope.rst
docs/notebooks/: example_fruit_from_urls.ipynb  example_gapminder.ipynb  example_mars_rover.ipynb  installation.ipynb  introduction.ipynb  quickstart.ipynb
trelliscope/: __init__.py  currencies.py  facets.py  html_utils.py  input.py  metas.py  panel_accessor.py  panel_series.py  panel_source.py  panels.py  progress_bar.py  state.py  trelliscope.py  utils.py  view.py
trelliscope/examples/: example_notebook.ipynb  fruit.py  gapminder.py  gapminder.r  gapminder_example.py  gapminder_example_multipanels.py  gapminder_panelSeries.py  get_data.py  introduction.ipynb  iris.py  mars.py  mars_panelSeries.py  meta_tests.py  pandas_extension_debugging.py  panelSeries_debugging.py  plotly_example.ipynb
trelliscope/examples/external_data/: gapminder.csv  iris.data  mars_rover.csv
trelliscope/tests/: conftest.py  helpers.py  test_currencies.py  test_html_utils.py  test_metas.py  test_panel_source.py  test_panels.py  test_state.py  test_trelliscope.py  test_utils.py  test_view.py
